@@ -5,6 +5,7 @@ cm4all-myproxy (0.14) unstable; urgency=low
   * implement auth plugin "caching_sha2_password" (incomplete, no RSA support)
   * cluster: prefer nodes where auth fails over unreachable ones
   * cluster: add option "disconnect_unavailable"
+  * check: combine client/server capabilities flags with bit-wise "AND"
 
  --   
 
